2008-12-24  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_windows_service.cc: Do not send XML if server address
	  is not set.

2008-12-16  Ramon Novoa  <rnovoa@artica.es>

	* win32/modules/pandora_module_wmiquery.cc,
	  win32/modules/pandora_module_wmiquery.h: Added to repository. WMI
	  query module.

	* win32/windows/pandora_wmi.cc,
	  win32/windows/pandora_wmi.h,
	  win32/modules/pandora_module.h,
	  win32/modules/pandora_module_factory.cc,
	  win32/modules/pandora_module_list.cc,
	  win32/modules/pandora_module.cc,
	  win32/PandoraAgent.dev: Added support for WMI query module.

2008-12-11  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* linux/plugins/SGE: Added the SGE plugin
	
	* mac_osx/plugins/SGE: Renamed the SGE plugin to be consistent with Linux
	
	* mac_osx/pandora_agent, mac_osx/pandora_agent.conf, 
	mac_osx/pandora_agent_installer, mac_osx/pandora_fms/StartupParameters.list
	mac_osx/pandora_fms/pandora_fms: Updated to latest (2.0) client code. Fixed
	installer issues where it would overwrite previous config.

2008-12-11  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_windows_service.h,
	  win32/pandora_windows_service.cc: Added support for a secondary server
	  .


2008-12-11  Ramon Novoa  <rnovoa@artica.es>

	* win32/windows/pandora_wmi.cc,
	  win32/pandora_windows_service.h,
	  win32/PandoraAgent.dev,
	  win32/pandora_windows_service.cc: Added an UDP Server. The
	  agent can receive remote commands.

	* win32/udp_server,
	  win32/udp_server/udp_server.cc,
	  win32/udp_server/udp_server.h: Added to repository. UDP Server.

2008-12-10  Ramon Novoa  <rnovoa@artica.es>

	*  linux/pandora_agent,
	   linux/pandora_agent.conf: Added support for a secondary server.

2008-11-25  Sancho Lerena <slerena@gmail.com>

	* linux/pandora_agent: Fixed problem parsing async_string.

	* linux/pandora_agent.conf: Sample of async_string module.

2008-09-04  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* mac_osx/plugins/XServeRAID: Updated for 2.0 type agents. Added