@@ -28,7 +28,7 @@ temporal "$AgentTemp$"
 
 interval 300
 
-# tranfer_modes: Possible values are tentacle (default), ftp and ssh.
+# tranfer_modes: Possible values are local, tentacle (default), ftp and ssh.
 transfer_mode tentacle
 server_port 41121
 
